turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:6: error: not found: value avances
    avances()
    ^LangtonsAnt:13: error: not found: value avancez
    avancez()
    ^