turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol == Color.white){
    setCouleurBrosse( Color.black)
    baisseBrosse();
    leveBrosse()
    droite()
    avances()
  }
  if (getCouleurSol == Color.black){
    setCouleurBrosse(Color.white)
    baisseBrosse()
    leveBrosse()
    gauche()
    avancez()
  }
}